guestbook.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  #annotations:
    #service.beta.kubernetes.io/azure-load-balancer-internal: "true"
  labels:
    app: guestbook
    tier: frontend
spec:
  # if your cluster supports it, uncomment the following to automatically create
  # an external load-balanced IP for the frontend service.
  type: LoadBalancer
  #loadBalancerIP: 10.240.0.7
  ports:
  - port: 80
  selector:
    app: guestbook
    tier: frontend
