sidecar-xds.yaml
---
# Source: citrix-cpx-istio-sidecar-injector/templates/cpx-sidecar-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: cpx-sidecar-injector
  name: cpx-sidecar-injector
  namespace: citrix-system
spec:
  ingress:
  - {}
  podSelector:
    matchLabels:
      app: cpx-sidecar-injector
  policyTypes:
  - Ingress
---
# Source: citrix-cpx-istio-sidecar-injector/templates/cpx-sidecar-injector-deployment-service.yaml
# Service 
apiVersion: v1
kind: Service
metadata:
  name: cpx-sidecar-injector
  namespace: citrix-system
  labels:
    istio: sidecar-injector
    app: cpx-sidecar-injector
spec:
  ports:
  - port: 443
  selector:
    istio: sidecar-injector
---
# Source: citrix-cpx-istio-sidecar-injector/templates/cpx-sidecar-injector-deployment-service.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpx-sidecar-injector
  namespace: citrix-system
  labels:
    app: sidecarInjectorWebhook
    istio: sidecar-injector
    app: cpx-sidecar-injector
    app.kubernetes.io/instance: cpx-sidecar-injector
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cpx-sidecar-injector
      istio: sidecar-injector
  template:
    metadata:
      labels:
        istio: sidecar-injector
        app: cpx-sidecar-injector
      annotations:
        sidecar.istio.io/inject: "false"
        scheduler.alpha.kubernetes.io/critical-pod: ""
    spec:
      serviceAccountName: cpx-sidecar-injector-service-account
      containers:
        - name: sidecar-injector-webhook
          image: gcr.io/istio-release/sidecar_injector:1.0.0
          imagePullPolicy: IfNotPresent
          args:
            - --caCertFile=/etc/istio/certs/cert.pem
            - --tlsCertFile=/etc/istio/certs/cert.pem
            - --tlsKeyFile=/etc/istio/certs/key.pem
            - --injectConfig=/etc/istio/inject/config
            - --meshConfig=/etc/istio/config/mesh
            - --healthCheckInterval=2s
            - --healthCheckFile=/health
            - --webhookConfigName=cpx-sidecar-injector
          volumeMounts:
          - name: config-volume
            mountPath: /etc/istio/config
            readOnly: true
          - name: certs
            mountPath: /etc/istio/certs
            readOnly: true
          - name: inject-config
            mountPath: /etc/istio/inject
            readOnly: true
          livenessProbe:
            exec:
              command:
                - /usr/local/bin/sidecar-injector
                - probe
                - --probe-path=/health
                - --interval=4s
            initialDelaySeconds: 4
            periodSeconds: 4
          readinessProbe:
            exec:
              command:
                - /usr/local/bin/sidecar-injector
                - probe
                - --probe-path=/health
                - --interval=4s
            initialDelaySeconds: 4
            periodSeconds: 4
          resources:
            requests:
              cpu: 10m
            
      volumes:
      - name: config-volume
        configMap:
          name: istio
      - name: certs
        emptyDir: {}
      - name: inject-config
        configMap:
          name: cpx-istio-sidecar-injector
          items:
          - key: config
            path: config
---
# Source: citrix-cpx-istio-sidecar-injector/templates/mutatingwebhook.yaml
# Mutating wehbook is used to perform sidecar injection. 
# It calls sidecar-injector-service when the label is matched.
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: cpx-sidecar-injector
  namespace: citrix-system
  labels:
    app: cpx-sidecar-injector
    chart: citrix-cpx-istio-sidecar-injector-1.6.4
    release: cpx-sidecar-injector
webhooks:
  - name: sidecar-injector.istio.io
    clientConfig:
      service:
        name: cpx-sidecar-injector
        namespace: citrix-system
        path: "/inject"
      caBundle: ""
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    failurePolicy: Fail
    namespaceSelector:
      matchLabels:
        cpx-injection: enabled
